name: DeltaVee
version: 1.0
cabal-version: >= 1.6
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2013 Irene Knapp
author: Irene Knapp
maintainer: irene.knapp@icloud.com
homepage: http://ireneknapp.com/software/
bug-reports: https://github.com/IreneKnapp/deltavee/issues/new
category: Game
synopsis: Turn-based orbital-mechanics combat game
description:
  This is a turn-based orbital-mechanics combat game.  What that means is that
  players (who may be computer-assisted) submit instructions every turn
  through either a friendly human interface, or a web-based API, and see the
  results in the same fashion.  There is no graphical front-end, nor even a
  terminal one; the ships and their sensors are all you get.  There are
  multiple instances of the game running in parallel, each with its own
  scoring system, win criteria, and temporal parameters.

Source-Repository head
  type: git
  location: git://github.com/IreneKnapp/deltavee.git

Executable deltavee
  main-is: DeltaVee.hs
  hs-source-dirs: Haskell
  build-depends: aeson >= 0.6.1.0 && < 1,
                 base >= 4.1 && < 5,
                 binary >= 0.5.1.0 && < 1,
                 bytestring >= 0.9.2.1 && < 1,
                 containers >= 0.4.2.1 && < 1,
                 direct-http >= 0.6 && < 1,
                 direct-sqlite >= 2.3.3.1 && < 3,
                 language-sqlite >= 1.1 && < 2,
                 mtl >= 2.1 && < 3,
                 network >= 2.4.0.1 && < 3,
                 system-uuid >= 2.1.1 && < 3,
                 text >= 0.11.2.1 && < 1

