name: larpbase
version: 1.0
cabal-version: >= 1.6
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2013 Irene Knapp
author: Irene Knapp
maintainer: irene.knapp@icloud.com
homepage: http://ireneknapp.com/software/
bug-reports: https://github.com/IreneKnapp/deltavee/issues/new

Source-Repository head
  type: git
  location: git://github.com/IreneKnapp/larp-base-two.git

Executable larpbase
  main-is: Larpbase.hs
  hs-source-dirs: Haskell
  build-depends: aeson >= 0.6.1.0 && < 1,
                 base >= 4.1 && < 5,
                 binary >= 0.5.1.0 && < 1,
                 bytestring >= 0.9.2.1 && < 1,
                 containers >= 0.4.2.1 && < 1,
                 direct-http >= 0.6 && < 1,
                 direct-sqlite >= 2.3.3.1 && < 3,
                 language-sqlite >= 1.1 && < 2,
                 mtl >= 2.1 && < 3,
                 network >= 2.4.0.1 && < 3,
                 network-info >= 0.2.0.3 && < 1,
                 system-uuid >= 2.1.1 && < 3,
                 text >= 0.11.2.1 && < 1

